--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>BonaGarden</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
-	<link rel="stylesheet" href="css/style.css?_v=20220901003539">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220901134258">
 	<link rel="shortcut icon" href="img/favicon.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -1490,7 +1490,7 @@
 			<button data-close type="button" class="popup__close"></button>
 		</div>
 	</div>
-	<script src="js/app.min.js?_v=20220901003539"></script>
+	<script src="js/app.js?_v=20220901134258"></script>
 </body>
 
 </html>
