--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 					<div class="uptitle">в Петергофе</div>
 					<div class="toptitle">
 						<h1>
-							<span data-watch data-watch-margin="-50px" class="animleft">ЙО</span>
-							<span data-watch data-watch-margin="-60px" class="animright">ГА</span>
+							<span data-watch data-watch-margin="-50px" class="animleft">ЗДА</span>
+							<span data-watch data-watch-margin="-60px" class="animright">РОВА</span>
 						</h1>
 						<div data-watch data-watch-margin="-50px" class="toptitle_img">
 							<img src="img/topimg.png" alt="">
