--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		<main class="main">
 			<div class="main__container">
 				<div class="top_block">
-					<div class="uptitle">в Петергофе</div>
+					<div class="uptitle">в Петергофе (Санкт-Петербург)</div>
 					<div class="toptitle">
 						<h1>
 							<span data-watch data-watch-margin="-50px" class="animleft">ЙО</span>
@@ -188,7 +188,6 @@
 						<span class="quantitycoashes">18</span> тренеров <br> по йоге
 					</div>
 					<div class="coaches__slider swiper">
-						<!-- Двигающееся часть слайдера -->
 						<div class="coaches__wrapper swiper-wrapper">
 							<div class="coaches__slide swiper-slide">
 								<div class="coach_imgs">
@@ -319,14 +318,8 @@
 							</div>
 
 						</div>
-						<!-- Если нужна пагинация -->
-						<!-- <div class="coaches__pagination swiper-pagination"></div> -->
-						<!-- Если нужна навигация (влево/вправо) -->
 						<button type="button" class="coaches__prev swiper-button-prev"></button>
 						<button type="button" class="coaches__next swiper-button-next"></button>
-
-						<!-- Если нужен скролбар -->
-						<!-- <div class="coaches__scrollbar swiper-scrollbar"></div> -->
 					</div>
 				</div>
 				<div class="options_block">
