--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		<main class="main">
 			<div class="main__container">
 				<div class="top_block">
-					<div class="uptitle">в Петергофе (Санкт-Петербург)</div>
+					<div class="uptitle">в Петергофе</div>
 					<div class="toptitle">
 						<h1>
 							<span data-watch data-watch-margin="-50px" class="animleft">ЙО</span>
